# cookiecutter-pypackage

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.sample  .gitignore  .pdm.toml  Makefile  pyproject.toml
